# RedPatternsFork

./: .clang-format  .clangd  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  DOCKER.md  Dockerfile  Makefile  README.md  build-docker.sh  build-laptop.sh  build_and_run.sh  build_cmake.sh  build_laptop.sh  compile_flags.txt  environment.yml  params.txt  run-sim.sh  run_laptop.sh  sweep.submit
analysis/: analyze.py  analyze_new.py  analyze_single_run.py  gen-params.py  gradient.py  notebook.py
analysis/layouts/: analyze_single_run.grid.json
cluster/: README.md  marimo.submit  run-marimo.sh  run-sim.sh  start-notebook-server.sh  submit-sweep.sh  sweep.submit  test_params.txt
include/: cli.cuh  cli.h  cli_arguments_parser.cuh  config.h  constants.cuh  cuda_kernel.cuh  cuda_kernel_linear.cuh  cuda_kernel_sigmoid.cuh  cuda_utils.cuh  definitions.h  file.cuh  file.h  gpu_state.cuh  gradient.cuh  hdf5_file.h  parameters.cuh  parameters.h  sim_types.h  simulations.cuh
src/: cli.c  config.c  cuda_kernel.cu  gpu_state.cu  hdf5_file.c  main.cu  simulations.cu
